syntax = "proto3";
package sac.v1;
option go_package = "g.echo.tech/dev/sac/gen/sac/v1;sacv1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "sac/v1/common.proto";

message WorkspaceFile {
  int64 id = 1;
  int64 user_id = 2;
  int64 agent_id = 3;
  optional int64 group_id = 4;
  string workspace_type = 5;
  string oss_key = 6;
  string file_name = 7;
  string file_path = 8;
  string content_type = 9;
  int64 size_bytes = 10;
  string checksum = 11;
  bool is_directory = 12;
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
}

message WorkspaceQuota {
  int64 user_id = 1;
  int64 agent_id = 2;
  int64 used_bytes = 3;
  int64 max_bytes = 4;
  int32 file_count = 5;
  int32 max_file_count = 6;
}

message GroupWorkspaceQuota {
  int64 group_id = 1;
  int64 used_bytes = 2;
  int64 max_bytes = 3;
  int32 file_count = 4;
  int32 max_file_count = 5;
}

message WorkspaceStatusResponse {
  bool configured = 1;
}

message CreateDirectoryRequest {
  string path = 1;
  int64 agent_id = 2;
}

message CreatePublicDirectoryRequest {
  string path = 1;
}

message CreateGroupDirectoryRequest {
  string path = 1;
  int64 group_id = 2;
}

message SyncToPodRequest {
  int64 agent_id = 1;
}

message CreateShareRequest {
  int64 agent_id = 1;
  string path = 2;
}

message ShareResponse {
  string short_code = 1;
  string url = 2;
}

message SharedFileMeta {
  string file_name = 1;
  string content_type = 2;
  int64 size_bytes = 3;
}

message InternalOutputDeleteRequest {
  int64 user_id = 1;
  int64 agent_id = 2;
  string path = 3;
}

// Request messages for RPCs that need path/query params
message ListFilesRequest {
  int64 agent_id = 1;
  string path = 2;
}

message DeleteFileRequest {
  int64 agent_id = 1;
  string path = 2;
}

message ListPublicFilesRequest {
  string path = 1;
}

message DeletePublicFileRequest {
  string path = 1;
}

message ListGroupFilesRequest {
  int64 group_id = 1;
  string path = 2;
}

message DeleteGroupFileRequest {
  int64 group_id = 1;
  string path = 2;
}

message ListOutputFilesRequest {
  int64 agent_id = 1;
  string path = 2;
}

message DeleteOutputFileRequest {
  int64 agent_id = 1;
  string path = 2;
}

message GetQuotaRequest {
  int64 agent_id = 1;
}

message GetGroupQuotaRequest {
  int64 group_id = 1;
}

message DeleteShareRequest {
  string code = 1;
}

message GetSharedFileRequest {
  string code = 1;
}

service WorkspaceService {
  // Status
  rpc GetStatus(Empty) returns (WorkspaceStatusResponse) {
    option (google.api.http) = { get: "/api/workspace/status" };
  }

  // Private workspace
  rpc ListFiles(ListFilesRequest) returns (FileListResponse) {
    option (google.api.http) = { get: "/api/workspace/files" };
  }
  rpc DeleteFile(DeleteFileRequest) returns (SuccessMessage) {
    option (google.api.http) = { delete: "/api/workspace/files" };
  }
  rpc CreateDirectory(CreateDirectoryRequest) returns (DirectoryResponse) {
    option (google.api.http) = { post: "/api/workspace/directories", body: "*" };
  }
  rpc GetQuota(GetQuotaRequest) returns (WorkspaceQuota) {
    option (google.api.http) = { get: "/api/workspace/quota" };
  }

  // Public workspace
  rpc ListPublicFiles(ListPublicFilesRequest) returns (FileListResponse) {
    option (google.api.http) = { get: "/api/workspace/public/files" };
  }
  rpc CreatePublicDirectory(CreatePublicDirectoryRequest) returns (DirectoryResponse) {
    option (google.api.http) = { post: "/api/workspace/public/directories", body: "*" };
  }
  rpc DeletePublicFile(DeletePublicFileRequest) returns (SuccessMessage) {
    option (google.api.http) = { delete: "/api/workspace/public/files" };
  }

  // Group workspace
  rpc ListGroupFiles(ListGroupFilesRequest) returns (FileListResponse) {
    option (google.api.http) = { get: "/api/workspace/group/files" };
  }
  rpc CreateGroupDirectory(CreateGroupDirectoryRequest) returns (DirectoryResponse) {
    option (google.api.http) = { post: "/api/workspace/group/directories", body: "*" };
  }
  rpc DeleteGroupFile(DeleteGroupFileRequest) returns (SuccessMessage) {
    option (google.api.http) = { delete: "/api/workspace/group/files" };
  }
  rpc GetGroupQuota(GetGroupQuotaRequest) returns (GroupWorkspaceQuota) {
    option (google.api.http) = { get: "/api/workspace/group/quota" };
  }

  // Output workspace
  rpc ListOutputFiles(ListOutputFilesRequest) returns (FileListResponse) {
    option (google.api.http) = { get: "/api/workspace/output/files" };
  }
  rpc DeleteOutputFile(DeleteOutputFileRequest) returns (SuccessMessage) {
    option (google.api.http) = { delete: "/api/workspace/output/files" };
  }

  // Output sharing
  rpc CreateShare(CreateShareRequest) returns (ShareResponse) {
    option (google.api.http) = { post: "/api/workspace/output/share", body: "*" };
  }
  rpc DeleteShare(DeleteShareRequest) returns (SuccessMessage) {
    option (google.api.http) = { delete: "/api/workspace/output/share/{code}" };
  }

  // Shared file (public, no auth)
  rpc GetSharedFileMeta(GetSharedFileRequest) returns (SharedFileMeta) {
    option (google.api.http) = { get: "/api/s/{code}" };
  }

  // Sync
  rpc SyncToPod(SyncToPodRequest) returns (SuccessMessage) {
    option (google.api.http) = { post: "/api/workspace/sync", body: "*" };
  }

  // Internal (sidecar, no auth)
  rpc InternalOutputDelete(InternalOutputDeleteRequest) returns (SuccessMessage) {
    option (google.api.http) = { post: "/api/internal/output/delete", body: "*" };
  }
}
